testing a new feature

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 	<body>
 		Hello World, I am Arghadeep
 		I am currently working in HBWSL
+		<p>I recently graduated from IIIT Vadodara with a BTech in Computer Science </p>
+		<p>My hobbies include playing Table Tennis, watching crime related TV shows, listening to music</p>
 	</body>
 
 </html>
