main branch is stable and doesnt test new features

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
 	<body>
 		Hello World, I am Arghadeep
 		I am currently working in HBWSL
+		<div>
+			<p>The tech stack in which I am proficient are React.js, Node.js, PostgresQL, Redis, MongoDB, AWS, TailwindCSS </p>
+		</div>
 	</body>
 
 </html>
