--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		</div>
 		<p>I recently graduated from IIIT Vadodara with a BTech in Computer Science </p>
 		<p>My hobbies include playing Table Tennis, watching crime related TV shows, listening to music</p>
+		<p> Currently I am living in Pune, Maharashtra </p>
 	</body>
 
 </html>
