adding conflicting line from project 1

--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
 		<p>I recently graduated from IIIT Vadodara with a BTech in Computer Science </p>
 		<p>My hobbies include playing Table Tennis, watching crime related TV shows, listening to music</p>
 		<p> Currently I am living in Pune, Maharashtra </p>
+		This line in Project1 will cause conflict
 	</body>
 
 </html>
